<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">
    <LinearLayout android:gravity="center_horizontal"
        android:id="@+id/linearColumnellipsetwo"
        android:layout_height="match_parent"
        android:layout_marginTop="26.02dp"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStylewhite_A700">
        <LinearLayout android:id="@+id/linearTechnology"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:orientation="vertical" style="@style/groupStylewhite_A700">
            <View
                android:background="@drawable/rectangle_bg_blue_51_radius_30_5"
                android:id="@+id/viewEllipseTwo"
                android:layout_gravity="start"
                android:layout_height="64.44dp"
                android:layout_marginEnd="23.24dp"
                android:layout_marginStart="23.24dp" android:layout_width="64.44dp"/>
            <FrameLayout android:id="@+id/frameStackellipsethree"
                android:layout_gravity="end"
                android:layout_height="342.58dp"
                android:layout_marginEnd="26.41dp"
                android:layout_marginStart="26.41dp"
                android:layout_marginTop="4.34dp" android:layout_width="336.99dp">
                <View
                    android:background="@drawable/rectangle_bg_blue_50_radius_17"
                    android:id="@+id/viewEllipseThree"
                    android:layout_gravity="top|end"
                    android:layout_height="35.92dp"
                    android:layout_marginBottom="8.67dp"
                    android:layout_marginStart="10.56dp"
                    android:layout_marginTop="5.2dp" android:layout_width="35.92dp"/>
                <View
                    android:background="@drawable/rectangle_bg_cyan_50_radius_11"
                    android:id="@+id/viewEllipseFour"
                    android:layout_gravity="bottom|end"
                    android:layout_height="23.24dp"
                    android:layout_marginEnd="6.34dp"
                    android:layout_marginStart="10.56dp"
                    android:layout_marginTop="8.67dp" android:layout_width="23.24dp"/>
                <ImageView android:id="@+id/imageOtherpostsEleven"
                    android:layout_gravity="start"
                    android:layout_height="404.61dp"
                    android:layout_marginBottom="8.67dp"
                    android:layout_marginEnd="10.56dp"
                    android:layout_width="314.81dp"
                    android:scaleType="fitXY"

                    tools:ignore="ContentDescription" tools:src="@drawable/img_otherposts11"/>
            </FrameLayout>
            <FrameLayout android:gravity="start"
                android:id="@+id/frameStackvectorfive"
                android:layout_height="303.55dp"
                android:layout_marginTop="3.47dp" android:layout_width="match_parent">
                <ImageView android:id="@+id/imageVectorFive"
                    android:layout_gravity="start"
                    android:layout_height="369.74dp"
                    android:layout_width="match_parent"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_vector5"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_vector5"/>
                <LinearLayout android:id="@+id/linearColumnmenu"
                    android:layout_gravity="bottom|center"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="32.09dp"
                    android:layout_marginEnd="23.24dp"
                    android:layout_marginStart="23.24dp"
                    android:layout_marginTop="32.09dp"
                    android:layout_width="match_parent" android:orientation="vertical">
                    <ImageView android:id="@+id/imageMenu"
                        android:layout_gravity="start"
                        android:layout_height="7.39dp"
                        android:layout_marginEnd="135.22dp"
                        android:layout_marginStart="135.22dp"
                        android:layout_width="63.38dp"
                        android:scaleType="fitXY"
                        android:src="@drawable/img_menu"
                        tools:ignore="ContentDescription" tools:src="@drawable/img_menu"/>
                    <TextView android:ellipsize="end"
                        android:id="@+id/txtTechnology"
                        android:layout_gravity="start"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="96.13dp"
                        android:layout_marginStart="96.13dp"
                        android:layout_marginTop="32.09dp"
                        android:layout_width="wrap_content"
                        android:singleLine="true"
                        android:text="@{technologyVM.technologyModel.txtTechnology}"
                        style="@style/txtRobotoromanmedium24" tools:text="@string/lbl_technology"/>
                    <TextView android:gravity="start"
                        android:id="@+id/txtDescription"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10.56dp"
                        android:layout_marginStart="8.45dp"
                        android:layout_marginTop="14.74dp"
                        android:layout_width="match_parent"
                        android:text="@{technologyVM.technologyModel.txtDescription}"
                        style="@style/txtRobotoromanlight16_1" tools:text="@string/msg_receive_your_du"/>
                    <LinearLayout android:id="@+id/linearRowskip"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="70.25dp"
                        android:layout_width="match_parent" android:orientation="horizontal">
                        <TextView android:ellipsize="end"
                            android:id="@+id/txtSkip"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="15.61dp"
                            android:layout_marginTop="15.61dp"
                            android:layout_weight="0.25"
                            android:layout_width="0dp"
                            android:singleLine="true"
                            android:text="@{technologyVM.technologyModel.txtSkip}"
                            style="@style/txtRobotoromanmedium16" tools:text="@string/lbl_skip"/>
                        <androidx.appcompat.widget.AppCompatButton
                            android:ellipsize="end"
                            android:gravity="center"
                            android:id="@+id/btnNext3"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="220.79dp"
                            android:layout_width="match_parent"
                            android:paddingBottom="16.48dp"
                            android:paddingEnd="31.69dp"
                            android:paddingStart="31.69dp"
                            android:paddingTop="16.48dp"
                            android:singleLine="true"
                            android:text="@string/lbl_next"
                            android:textAllCaps="false"
                            style="@style/btnSolidRounded_2" tools:text="@string/lbl_next"/>
                    </LinearLayout>
                </LinearLayout>
            </FrameLayout>
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>