<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">
    <FrameLayout android:id="@+id/frameLogin"
        android:layout_height="match_parent"
        android:layout_width="match_parent" style="@style/groupStylewhite_A700">

        <LinearLayout android:id="@+id/linearColumnellipsefive"
            android:layout_gravity="top|center"
            android:layout_height="match_parent"
            android:layout_marginBottom="12.14dp"
            android:layout_marginStart="10.56dp"
            android:layout_marginTop="12.14dp"
            android:layout_width="match_parent" android:orientation="vertical">

            <LinearLayout android:id="@+id/linearRowellipsefive"
                android:layout_height="wrap_content"
                android:layout_width="match_parent" android:orientation="horizontal">

                <FrameLayout android:id="@+id/frameStackellipsefive"
                    android:layout_height="101.47dp"
                    android:layout_marginBottom="17.35dp" android:layout_width="274.67dp">

                    <View
                        android:background="@drawable/rectangle_border_gray_200_91_radius_51"
                        android:id="@+id/viewEllipseFive"
                        android:layout_gravity="top|start"
                        android:layout_height="107.75dp"
                        android:layout_marginBottom="8.67dp"
                        android:layout_marginEnd="10.56dp" android:layout_width="107.75dp"/>

                    <ImageView android:id="@+id/imageEpriseLogo"
                        android:layout_gravity="bottom|end"
                        android:layout_height="68.67dp"
                        android:layout_marginStart="10.56dp"
                        android:layout_marginTop="8.67dp"
                        android:layout_width="171.14dp"
                        android:scaleType="fitXY"

                        tools:ignore="ContentDescription" tools:src="@drawable/img_epriselogo"/>
                </FrameLayout>

                <ImageView android:id="@+id/imageEllipseThree"
                    android:layout_height="78.17dp"
                    android:layout_marginStart="63.38dp"
                    android:layout_marginTop="54.64dp"
                    android:layout_width="62.33dp"
                    android:scaleType="fitXY"

                    tools:ignore="ContentDescription" tools:src="@drawable/img_ellipse3"/>
            </LinearLayout>

            <TextView android:ellipsize="end" android:id="@+id/txtLogin"
                android:layout_gravity="start"
                android:layout_height="wrap_content"
                android:layout_marginEnd="155.29dp"
                android:layout_marginStart="155.29dp"
                android:layout_marginTop="3.47dp"
                android:layout_width="wrap_content"
                android:singleLine="true"
                android:text="@{loginVM.loginModel.txtLogin}"
                style="@style/txtRobotoromanlight24" tools:text="@string/lbl_log_in"/>

            <LinearLayout android:gravity="start"
                android:id="@+id/linearRowellipsetwo"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10.56dp"
                android:layout_marginStart="8.45dp"
                android:layout_marginTop="0.87dp"
                android:layout_width="match_parent" android:orientation="horizontal">

                <View
                    android:background="@drawable/rectangle_bg_blue_52_radius_21_5"
                    android:id="@+id/viewEllipseTwo"
                    android:layout_height="45.43dp"
                    android:layout_marginBottom="167.39dp" android:layout_width="45.43dp"/>

                <FrameLayout android:id="@+id/frameStackellipsefour"
                    android:layout_height="178.66dp"
                    android:layout_marginStart="12.68dp"
                    android:layout_marginTop="26.02dp" android:layout_width="235.58dp">

                    <View
                        android:background="@drawable/rectangle_bg_cyan_50_radius_11"
                        android:id="@+id/viewEllipseFour"
                        android:layout_gravity="bottom|start"
                        android:layout_height="23.24dp"
                        android:layout_marginBottom="22.55dp"
                        android:layout_marginEnd="10.56dp"
                        android:layout_marginTop="22.55dp" android:layout_width="23.24dp"/>

                    <ImageView android:id="@+id/imageOtherpostsThirteen"
                        android:layout_gravity="end"
                        android:layout_height="217.62dp"
                        android:layout_marginStart="10.56dp"
                        android:layout_width="215.51dp"
                        android:scaleType="fitXY"

                        tools:ignore="ContentDescription" tools:src="@drawable/img_otherposts13"/>

                </FrameLayout>

                <View
                    android:background="@drawable/rectangle_border_gray_202_radius_20_5"
                    android:id="@+id/viewEllipseSix"
                    android:layout_height="43.31dp"
                    android:layout_marginBottom="53.77dp"
                    android:layout_marginStart="28.52dp"
                    android:layout_marginTop="115.35dp" android:layout_width="43.31dp"/>

            </LinearLayout>

            <EditText
                android:background="@drawable/rectangle_bg_white_a700_border_light_blue_a200_radius_5"
                android:ellipsize="end"
                android:hint="@string/lbl_username"
                android:id="@+id/etGroupFour" android:inputType="text"
                android:layout_height="wrap_content"
                android:layout_marginEnd="15.85dp"
                android:layout_marginStart="15.85dp"
                android:layout_marginTop="17.35dp"
                android:layout_width="match_parent"
                android:paddingBottom="20.82dp"
                android:paddingEnd="31.69dp"
                android:paddingStart="25.35dp"
                android:paddingTop="19.95dp"
                android:singleLine="true"
                android:text="@={loginVM.loginModel.etGroupFourValue}"
                android:textColorHint="@color/black_900"
                style="@style/etSolidRoundedOutline" tools:ignore="Autofill"/>

            <EditText
                android:background="@drawable/rectangle_bg_white_a700_border_light_blue_a200_radius_5"
                android:ellipsize="end"
                android:hint="@string/lbl_password"
                android:id="@+id/etGroupThree"
                android:inputType="textPassword"
                android:layout_height="wrap_content"
                android:layout_marginEnd="15.85dp"
                android:layout_marginStart="15.85dp"
                android:layout_marginTop="17.35dp"
                android:layout_width="match_parent"
                android:paddingBottom="22.55dp"
                android:paddingEnd="31.69dp"
                android:paddingStart="25.35dp"
                android:paddingTop="18.21dp"
                android:singleLine="true"
                android:text="@={loginVM.loginModel.etGroupThreeValue}"
                android:textColorHint="@color/black_900"
                style="@style/etSolidRoundedOutline" tools:ignore="Autofill"/>

            <androidx.appcompat.widget.AppCompatButton
                android:ellipsize="end" android:gravity="center"
                android:id="@+id/btnLogInOne"
                android:layout_height="wrap_content"
                android:layout_marginEnd="15.85dp"
                android:layout_marginStart="15.85dp"
                android:layout_marginTop="17.35dp"
                android:layout_width="match_parent"
                android:paddingBottom="14.74dp"
                android:paddingEnd="31.96dp"
                android:paddingStart="31.69dp"
                android:paddingTop="14.74dp"
                android:singleLine="true"
                android:text="@string/lbl_log_in2"
                android:textAllCaps="false"
                style="@style/btnSolidRounded_2" tools:text="@string/lbl_log_in2"/>

        </LinearLayout>

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>